--- a/index.html
+++ b/index.html
@@ -130,22 +130,29 @@
             .load {
                 float: right;
             }
+            .browseData {
+                float: left;
+            }
+            .loadData {
+                float: left;
+            }
         </style>
         <script src="d3-lasso.js"></script>
     </head>
     <body>
     <textarea type="text" id="search" class="label_search"></textarea>
-    <button id="search_button" class="label_search">Search</button>
-    <button id="loadData" class="load">Load</button>
-    <input type="file" name="browse" text="Load CSV" class="browse" id="browseData">
+    <button id="search_button" class="label_search">Filter selected reports</button>
+    <input type="file" name="browse" text="Load CSV" class="browseData" id="browseData">
+    <button id="loadData" class="loadData" text="Load CSV">Load CSV</button>
     <button id="reset" class="reset">Reset</button>
     <div id="wrapper" class="wrapper">
             <div id="vis-container" class="vis-container"></div>
             <div class="clusterize">
                 <table id="table_1">
                     <thead>
+                    <th><span style="font-size: larger; ">Selected Reports</span></th>
                     <tr>
-                        <th>Selected Reports</th>
+                        <th>Select All</th>
                         <th><input type="checkbox" class="selectAll" id="selectAll"></th>
                     </tr>
                     </thead>
@@ -162,7 +169,7 @@
             </div>
         </div>
         <textarea id="txtName" name="txt-Name" placeholder="Search for something.."></textarea>
-        <button id="button">Search</button>
+        <button id="button">Search keyword or Regex</button>
         <button id="label_2" class="label_2">Label 2</button>
         <button id="label_1" class="label_1">Label 1</button>
         <button id="save" class="save">Save</button>
@@ -373,6 +380,11 @@
                   d3.selectAll(".mycheckbox").on("click", update_selected_ids);
                   update_selected_ids();
                   updateColors();
+                  // try and uncheck the selectAll box
+                  d3.selectAll(".selectAll").each(function (d) {
+                      cb = d3.select(this);
+                      cb.property("checked", false);
+                  });
               };
 
               var filterresults = function (selections) {
@@ -601,15 +613,6 @@
 
               // d3.select("#rfile").on("onmouseup", function(){console.log('Clicked button!')})
               lasso.items(d3.selectAll(".dot"));
-              // add the options to the button
-              // d3.select("#selectButton")
-              //     .selectAll('myOptions')
-              //     .data(['umap', 'tsne'])
-              //     .enter()
-              //     .append('option')
-              //     .text(function (d) { return d; }) // text showed in the menu
-              //     .attr("value", function (d) { return d; })
-              // When the button is changed, run the updateChart function
               d3.select("#loadData").on("click", function (d) {
                   // recover the option that has been chosen
                   console.log('LOAD !');
