added regex search in search bar

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
               d3.select("#button").on("click", function (d) {
                   var txtName = d3.select("#txtName").node().value;
                   circles.style("fill", function (d) {
-                      return d.text.toLowerCase().includes(txtName.toLowerCase()) ? "green" : "black";
+                      return d.text.toLowerCase().match(txtName.toLowerCase()) ? "green" : "black";
                   });
               });
               d3.select("#search_button").on("click", function () {
